--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
-    "allowJs": true,
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
 
     // Bundler mode
     "moduleResolution": "bundler",
@@ -23,5 +25,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": ["src"]
 }
