minor foxes, added logo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "rampike",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": false,
+  "type": "module",
+  "exports": {
+    ".": {
+      "main": "./dist/index.js",
+      "module": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": ["dist"],
   "scripts": {
     "build": "tsup src/index.ts"
   },
