--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "rampike",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "private": false,
   "type": "module",
   "exports": {
     ".": {
-      "main": "./dist/index.js",
-      "module": "./dist/index.mjs",
+      "main": "./dist/index.cjs",
+      "module": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
