add soilborne function

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "rampike",
-  "version": "0.0.7",
+  "version": "0.0.9",
   "private": false,
   "type": "module",
   "exports": {
     ".": {
       "main": "./dist/index.cjs",
       "module": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "files": ["dist"],
