--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "rampike",
-  "version": "0.0.9",
+  "version": "0.0.12",
   "private": false,
   "type": "module",
   "exports": {
     ".": {
       "main": "./dist/index.cjs",
-      "module": "./dist/index.js",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "module": "./dist/index.js",
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "files": ["dist"],
